src/test/resources/extension/valid/newtype/union.awsl
begin

newtype MaybeInt is union
    Nothing;
    Just of (int x);
end

var a = Nothing();
var b = Just(4);

end