src/test/resources/extension/invalid/newtype/typeSameName3.awsl
begin

newtype Copy is
    int value;
end

newtype Copy is union
    Copyable of (char value);
end

exit 0;

end